# strawchemy

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  codecov.yml  cog.toml  mise.toml  noxfile.py  pyproject.toml  renovate.json  tasks.md
.github/: SECURITY.md  changelog.tera  issue-labeler.yaml  pr-labeler.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bump.yaml  cd.yaml  ci.yaml  codeflash.yaml  codeql.yml  issue-triage.yaml  pr-triage.yaml  publish.yaml  test.yaml
examples/testapp/: README.md  mise.toml  pyproject.toml
examples/testapp/app/: app.py  schema.py  types.py
examples/testapp/testapp/: models.py  schema.py  types.py
src/: bubble_sort.py
src/strawchemy/: __init__.py  __metadata__.py  _factories.py  config.py  constants.py  exceptions.py  field.py  graph.py  input.py  mapper.py  types.py  typing.py  utils.py
src/strawchemy/config/: base.py  databases.py
src/strawchemy/dto/: __init__.py  base.py  pydantic.py  strawberry.py  types.py  utils.py
src/strawchemy/dto/backend/: dataclass.py  pydantic.py  strawberry.py
src/strawchemy/dto/inspectors/: __init__.py  base.py  sqlalchemy.py
src/strawchemy/factories/: __init__.py  aggregations.py  base.py  inputs.py  types.py
src/strawchemy/filters/: __init__.py  base.py  geo.py  inputs.py
src/strawchemy/graphql/: __init__.py  dto.py  factory.py  filters.py  inspector.py  mutation.py  typing.py
src/strawchemy/graphql/factories/: aggregations.py  base.py  enum.py  inputs.py  types.py
src/strawchemy/graphql/filters/: __init__.py  base.py  geo.py  inputs.py
src/strawchemy/mutation/: __init__.py  field_builder.py  fields.py  input.py  types.py
src/strawchemy/repository/: __init__.py  typing.py
src/strawchemy/repository/sqlalchemy/: __init__.py  _async.py  _base.py  _sync.py
src/strawchemy/repository/strawberry/: __init__.py  _async.py  _node.py  _sync.py  base.py
src/strawchemy/scalars/: __init__.py
src/strawchemy/schema/: field.py  interfaces.py
src/strawchemy/schema/factories/: __init__.py  _kwargs.py  aggregations.py  base.py  enum.py  inputs.py  types.py
src/strawchemy/schema/filters/: __init__.py  base.py  fields.py  geo.py  inputs.py
src/strawchemy/schema/mutation/: __init__.py  field_builder.py  fields.py  input.py  types.py
src/strawchemy/schema/scalars/: __init__.py  base.py  geo.py
src/strawchemy/sqlalchemy/: _executor.py  _query.py  _scope.py  _transpiler.py  hook.py  inspector.py  typing.py
src/strawchemy/sqlalchemy/filters/: __init__.py  base.py  geo.py  postgresql.py
src/strawchemy/sqlalchemy/repository/: _async.py  _base.py  _sync.py
src/strawchemy/strawberry/: __init__.py  _field.py  _registry.py  _utils.py  dto.py  factory.py  geo.py  inspector.py  scalars.py  types.py  typing.py
src/strawchemy/strawberry/factories/: aggregations.py  base.py  enum.py  inputs.py  types.py
src/strawchemy/strawberry/filters/: base.py  geo.py  inputs.py
src/strawchemy/strawberry/mutation/: input.py  types.py
src/strawchemy/strawberry/repository/: _async.py  _base.py  _node.py  _sync.py
src/strawchemy/testing/: pytest_plugin.py
src/strawchemy/transpiler/: __init__.py  _aliasing.py  _executor.py  _plan.py  _planner.py  _query.py  _scope.py  _strategies.py  _transpiler.py  hook.py
src/strawchemy/utils/: annotation.py  graph.py  registry.py  strawberry.py  text.py
src/strawchemy/validation/: __init__.py  base.py  pydantic.py
tests/: CONTRIBUTING.md  conftest.py  fixtures.py  models.py  syrupy.py  typing.py  utils.py
tests/benchmarks/: conftest.py  fixtures.py  test_build_schema.py  test_queries.py
tests/integration/: conftest.py  fixtures.py  models.py  test_aggregation_filters.py  test_aggregations.py  test_custom_resolver.py  test_default_order_by.py  test_distinct.py  test_distinct_on.py  test_field_extension.py  test_filters.py  test_fine_grained_filters.py  test_geo_filters.py  test_multiple_queries.py  test_mutations.py  test_optimizations.py  test_order_by.py  test_pagination.py  test_plan_equivalence.py  test_queries.py  test_query_hooks.py  test_schema.py  test_upsert.py  types.py  utils.py
tests/integration/__snapshots__/: test_aggregation_filters.ambr  test_aggregations.ambr  test_custom_resolver.ambr  test_default_order_by.ambr  test_distinct.ambr  test_distinct_on.ambr  test_filters.ambr  test_fine_grained_filters.ambr  test_mutations.ambr  test_optimizations.ambr  test_order_by.ambr  test_queries.ambr  test_query_hooks.ambr  test_upsert.ambr
tests/integration/data_types/: test_array.py  test_date_time.py  test_hstore.py  test_interval.py  test_json.py
tests/integration/data_types/__snapshots__/: test_hstore.ambr  test_interval.ambr  (+1 more)
tests/integration/filters/: test_array.py  test_date_time.py  test_filters.py  test_interval.py  test_json.py
tests/integration/geo/: models.py  test_geo_filters.py  types.py  utils.py
tests/integration/types/: __init__.py  mysql.py  postgres.py  sqlite.py
tests/integration/types_/: __init__.py  postgres.py
tests/schemas/: all_order_by.py  pagination.py  pagination_defaults.py
tests/unit/: conftest.py  dc_models.py  fixtures.py  models.py  test_event_registry.py  test_fine_grained_filters.py  test_inspector.py  test_metadata.py  test_mutation_input.py  test_order_by_expr.py  test_pytest_plugin.py  test_registry.py  test_scalars.py  test_utils.py  utils.py
tests/unit/dto/: test_config.py  test_dto.py  test_filter.py
tests/unit/mapping/: test_is_type_of.py  test_model_config.py  test_model_field.py  test_schemas.py  test_strict.py  test_types.py
tests/unit/schema/: test_types.py
tests/unit/schemas/: custom_id_field_name.py  default_order_by_invalid.py  default_order_by_non_list.py  distinct.py  enums.py  mutation_and_query.py  nullable_fields.py  optimizations.py  query_hooks.py  union_override_lazy.py  union_override_plain.py  validation.py
tests/unit/transpiler/: conftest.py  test_collector.py  test_executor.py  test_join_strategies.py  test_optimizations.py  test_plan.py  test_planner.py  test_planner_helpers.py
(+218 files in other folders)
