[project]
name = "strawchemy"
version = "0.22.0"
description = "Generate GraphQL API from SQLAlchemy models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gazorby", email = "gazorby@pm.me" }]
keywords = ["API", "SQL", "graphql", "sqlalchemy", "strawberry"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Database",
  "Topic :: Database :: Database Engines/Servers",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "msgspec>=0.20.0",
  "sqlalchemy>=2.0.10",
  "strawberry-graphql>=0.283.2",
  "typing-extensions"
]

[project.urls]
Changelog = "https://github.com/gazorby/strawchemy/blob/main/CHANGELOG.md"
Documentation = "https://github.com/gazorby/strawchemy"
Homepage = "https://github.com/gazorby/strawchemy"
Issues = "https://github.com/gazorby/strawchemy/issues"
Repository = "https://github.com/gazorby/strawchemy"
"Sponsor on GitHub" = "https://github.com/sponsors/gazorby"

[project.optional-dependencies]
geo = ["GeoAlchemy2", "geojson-pydantic", "shapely"]
pydantic = ["pydantic"]

[dependency-groups]
dev = [
  "debugpy",
  "testapp",
  { include-group = "aiosqlite" },
  { include-group = "lint" },
  { include-group = "mysql" },
  { include-group = "nox" },
  { include-group = "postgres" },
  { include-group = "test" },
]
aiosqlite = ["aiosqlite"]
codeflash = ["codeflash"]
lint = [
  "ruff",
  "slotscheck>=0.16.5",
  "tombi>=1.1.0",
  "ty>=0.0.40",
  "vulture",
]
mysql = ["asyncmy", "cryptography"]
nox = ["nox-uv", "nox[uv]"]
postgres = ["asyncpg>=0.29.0", "psycopg[binary,pool]>=3.2.3"]
test = [
  "covdefaults",
  "diff-cover>=10.3.0",
  "inline-snapshot>=0.34.2",
  "pytest",
  "pytest-asyncio>=0.24",
  "pytest-cov",
  "pytest-databases[postgres,mysql]",
  "pytest-lazy-fixtures",
  "pytest-pretty",
  "pytest-xdist[psutil]",
  "sqlparse",
  "syrupy",
  "testapp",
]
unasyncd = ["unasyncd"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.codeflash]
# All paths are relative to this pyproject.toml's directory.
module-root = "src"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
formatter-cmds = ["ruff check --exit-zero --fix $file", "ruff format $file"]

[tool.codespell]
skip = "*.po,*.ts,./src/3rdParty,./src/Test"
ignore-words-list = "nin"

[tool.coverage.run]
branch = true
source = ["src"]
plugins = ["covdefaults"]
omit = ["*/tests/*", "src/strawchemy/schema/factories/_kwargs.py"]
parallel = true
relative_files = true

[tool.coverage.report]
exclude_also = ["def __repr__"]
fail_under = 50

[tool.hatch.build.targets.wheel]
packages = ["src/strawchemy"]

[tool.pytest.ini_options]
markers = [
  "snapshot: snapshot-based tests using syrupy",
  "inline_snapshot: snapshot-based tests using inline-snapshots",
  "integration: SQLAlchemy integration tests",
  "geo: Geoalchemy2 integration tests",
  "aiosqlite: SQLite (aiosqlite) Tests",
  "sqlite: SQLite Tests",
  "asyncmy: MySQL (asyncmy) Tests",
  "psycopg_async: SQLAlchemy Postgres (psycopg async) Tests",
  "psycopg_sync: SQLAlchemy Postgres (psycopg sync) Tests",
  "asyncpg: SQLAlchemy Postgres (asyncpg) Tests",
]
testpaths = ["tests"]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".tox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
  "tests/codegen/snapshots",
  "alembic/*  ",
]
src = ["src/strawchemy", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "A005",  # flake8-builtins - module {name} shadows a Python standard-library module
  "D100",  # pydocstyle - missing docstring in public module
  "D101",  # pydocstyle - missing docstring in public class
  "D102",  # pydocstyle - missing docstring in public method
  "D103",  # pydocstyle - missing docstring in public function
  "D104",  # pydocstyle - missing docstring in public package
  "D105",  # pydocstyle - missing docstring in magic method
  "D106",  # pydocstyle - missing docstring in public nested class
  "D107",  # pydocstyle - missing docstring in __init__
  "E501",  # pycodestyle - line too long, handled by ruff format
  "PLR0913",  # pylint - too many arguments
  "ARG002",  # flake8-unused-argument - unused arguments
  "COM812",  # flake8-commas - Checks for the absence of trailing commas
  "S101",  # flake8-bandit - Assert statements, investigate
  "ANN401",  # flake8-annotations - typing Any disallowed in function arguments
  "FBT",  # flake8-annotations - boolean trap. Try to remove this in the future
  "PT013",  # flake8-pytest-style - Incorrect import of pytest
  "UP007",  # flake8-builtins - Unnecessary `Union` annotation
  "UP045",  # flake8-builtins - Unnecessary `Optional` annotation
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["TC001", "UP037", "PLR2004", "PLC0415"]
"src/strawchemy/strawberry/factories/*" = ["UP007", "UP045"]

[tool.ruff.lint.isort]
known-first-party = ["strawchemy", "tests"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.slotscheck]
exclude-modules = '''
(
  (^|\.)test_
  |^tests\.*
  |^tools\.*
  |^docs\.*
  |^examples\.*
  |^sqlalchemy\.(
    testing
    |ext\.mypy  # see slotscheck/issues/178
  )
)
'''
include-modules = "strawchemy.*"
require-superclass = false
strict-imports = true

[tool.ty.src]
exclude = [
  "**/__pycache__",
  "**/.hypothesis",
  "**/.mypy_cache",
  "**/.pytest_cache",
  "**/.ruff_cache",
  "**/.venv",
  "**/.tox",
  "**/.nox",
  "**/.uv-python",
  "**/build",
  "**/dist",
  "**/node_modules",
  "**/cdk.out",
  "**/alembic/versions",
]

[tool.ty.environment]
python = ".venv"
python-version = "3.10"

[tool.ty.analysis]
respect-type-ignore-comments = true

[tool.unasyncd]
add_editors_note = true
ruff_fix = true
ruff_format = true
update_docstrings = true
cache = true

[tool.unasyncd.files]
"src/strawchemy/repository/sqlalchemy/_async.py" = "src/strawchemy/repository/sqlalchemy/_sync.py"
"src/strawchemy/repository/strawberry/_async.py" = "src/strawchemy/repository/strawberry/_sync.py"

[tool.unasyncd.per_file_add_replacements."src/strawchemy/repository/sqlalchemy/_async.py"]
"strawchemy.transpiler.AsyncQueryExecutor" = "strawchemy.transpiler.SyncQueryExecutor"
SQLAlchemyGraphQLAsyncRepository = "SQLAlchemyGraphQLSyncRepository"
"strawchemy.repository.typing.AnyAsyncSession" = "strawchemy.repository.typing.AnySyncSession"

[tool.unasyncd.per_file_add_replacements."src/strawchemy/repository/strawberry/_async.py"]
"strawchemy.repository.strawberry.base.IS_ASYNC_REPOSITORY" = "strawchemy.repository.strawberry.base.IS_SYNC_REPOSITORY"
"strawchemy.repository.sqlalchemy.SQLAlchemyGraphQLAsyncRepository" = "strawchemy.repository.sqlalchemy.SQLAlchemyGraphQLSyncRepository"
"strawchemy.repository.typing.AnyAsyncSession" = "strawchemy.repository.typing.AnySyncSession"
"strawchemy.repository.typing.AsyncSessionGetter" = "strawchemy.repository.typing.SyncSessionGetter"
StrawchemyAsyncRepository = "StrawchemySyncRepository"

[tool.uv]
default-groups = ["dev"]
conflicts = [[{ group = "test" }, { group = "unasyncd" }]]
exclude-newer = "3 days"

[tool.uv.sources]
testapp = { workspace = true }

[tool.uv.workspace]
members = ["examples/*"]

[tool.vulture]
min_confidence = 100
paths = ["src", "tests"]
sort_by_size = true
exclude = ["tests/fixtures.py", "tests/unit/schemas/mutations"]
ignore_names = ["target"]
