[project]
name = "testapp"
version = "0.1.0"
description = "Basic test app"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy",
    "granian[reload]",
    "strawberry-graphql",
    "litestar[sqlalchemy]",
    "litestar-granian",
    "aiosqlite",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
